--- a/project1/libs/css/styles.css
+++ b/project1/libs/css/styles.css
@@ -357,6 +357,9 @@ html, body, #map {
 .leaflet-control-zoom-out {
   width: 45px !important;
 }
+ #images-whole-container {
+  min-height: 500px;
+}
 }
 @media only screen and (max-width: 400px) {
   #temp-container{
